# Infinite-CamPy

./: InfiniteCampus.py  InfiniteCampusExceptions.py  LICENSE  README.md  TODO  pyproject.toml
InfiniteCampus/: InfiniteCampus.py  InfiniteCampusExceptions.py  __init__.py  calendar.py  client.py  grades.py  http_manager.py  student.py
InfiniteCampus/SchoolObjects/: __init__.py  assignment.py  category.py  course.py  enrollment.py  task.py  term.py
infinitecampus/: InfiniteCampusExceptions.py  __init__.py  calendar.py  client.py  grades.py  states.py
infinitecampus/http_manager/: __init__.py  http_calendar.py  http_grades.py  http_student.py
infinitecampus/schoolObjects/: __init__.py  assignment.py  category.py  enrollment.py
infinitecampus/schoolObjects/calendarObjects/: day.py
infinitecampus/schoolObjects/gradeObjects/: __init__.py  term.py
